--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -6,7 +6,7 @@ comments: true
 categories: [code review,github,code]
 ---
 
-As an open source contributor, it's important to recognize and show appreciation for contributions, especially external contributions.
+As an open source maintainer, it's important to recognize and show appreciation for contributions, especially external contributions.
 
 We've [known for a while](https://vimeo.com/15488784) that after a person's basic needs are met, money is a poor motivator and does not lead to better work. This seems especially true for open source projects. Often, people are motivated by other intrinsic factors such as the recognition and admiration of their peers, the satisfaction of building something that lasts, or because they need the feature. In the workplace, good managers understand that acknowledging good work is as important if not more so than providing monetary rewards.
 
