Link to CoreFx repo

--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -12,7 +12,7 @@ We've [known for a while](https://vimeo.com/15488784) that after a person's basi
 
 This is why it's so important to thank contributors for their contributions to your projects, big and small.
 
-Seems obvious, but I was reminded of this when I read [this blog post](http://hughbellamy.co.uk/blog.html#corefx-analysis) by Hugh Bellamy about his experiences contributing to CoreFX. In the post, he describes both his positive and negative experiences. Here's one of his negative experiences.
+Seems obvious, but I was reminded of this when I read [this blog post](http://hughbellamy.co.uk/blog.html#corefx-analysis) by Hugh Bellamy about his experiences contributing to the [.NET CoreFX](https://github.com/dotnet/corefx) repository. In the post, he describes both his positive and negative experiences. Here's one of his negative experiences.
 
 > In the hustle and bustle of working at Microsoft, many of my PRs (of all sizes) are merged with only a "LGTM" once the CI passes. This can lead to a feeling of lack of recognition of the work you spent time on.
 
