--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -24,7 +24,7 @@ Seems obvious, but I was reminded of this when I read [this blog post](http://hu
 
 > .@bellamy_hugh Quite fair to say that we should improve in this regard!
 
-What I found interesting though was the part where they treat PRs if it came from fellow employees. That's great, but it made me think, "WHA?! You don't thank each other!" ;)
+What I found interesting though was the part where they treat PRs if it came from fellow employees. That's very admirable! But it did make me wonder, "WHA?! You don't thank each other!" ;)
 
 To be clear, I have a lot of admiration for Immo and the CoreFX team. They've been responsive to my own issues in the past and I think overall they're doing a great job of managing open source on GitHub. In fact, [a tremendous job](https://blogs.msdn.microsoft.com/dotnet/2015/01/28/net-core-open-source-update/)! (_Side note, Hey Immo! Would love to see a new Open Source Update_)
 
