--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -30,6 +30,8 @@ To be clear, I have a lot of admiration for Immo and the CoreFX team. They've be
 
 This is one of those easy things to forget. In fact, I forgot to call it out in my own blog post about [conducting effective code reviews](http://haacked.com/archive/2013/10/28/code-review-like-you-mean-it.aspx/). Recognition makes contributors feel appreciated. And often, all it takes is something small. It doesn't require a ceremony.
 
+## GitHub Selfie to the rescue
+
 However, if you want to add a little bit of ceremony, I recommend the [GitHub Selfie Extension](https://github.com/thieman/github-selfies) which is available in the [Chrome Web Store](https://chrome.google.com/webstore/detail/github-selfies/ldnpkdnkgkogfnahcnldaedcoadjbkbl) as well as for [Firefox](https://addons.mozilla.org/en-US/firefox/addon/github-selfies/).
 
 I've tweeted about it before, but realized I never blogged about it. The extension adds a selfie button for Pull Requests that let you take a static selfie or an animated Gif. My general rule of thumb is to try and post an animated selfie for first time contributions and major contributions. In other cases, such as when I'm reviewing code on my phone, I'll just post an emoji or animated gif along with a simple thank you.
