--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Thank you for your pull request"
+title: "Thank You For Your Pull Request"
 date: 2016-04-28 -0800
 comments: true
 categories: [code review,github,code]
