--- a/_posts/2016/2016-08-24-cruising.md
+++ b/_posts/2016/2016-08-24-cruising.md
@@ -53,8 +53,8 @@ Our second tour was of the bridge where the Dutch captain showed us the navigati
 
 Lesson, phase cancellation only works when the wavelengths are equivalent amplitude. In other words, don't overdo the drinking.
 
-The ship had a place for kids called "Club Hal" where you could drop kids off for a few hours at a time. They had a lot of structured activities and a few X-boxes set up. My kids hated it at first because they just wanted to do their own thing but they had to partake in the structured activities. Over time, they warmed up to it a little.
+The ship had a place for kids called "Club Hal" where you could drop kids off for a few hours at a time and go enjoy some Pina Coladas (to help with motion sickness of course). They had a lot of structured activities and a few X-boxes set up. Naturally, since this was convenient for us, my kids hated it. Over time, they warmed up to it a little as the kids at Club Hal held a revolt and demanded more kids choice activities and got their way.
 
 Lesson here, it's important to balance a bit of structure with letting kids choose what they want to do.
 
-Now I'm back home and back to work and after a few days, the ground has stopped moving, so all in all, a successful trip. We didn't have internet access for most of the time and I think that was a huge factor in me feeling refreshed by the end. I definitely recommend when you take vacation, fully disconnect from work and even the internet. It'll do you a lot of good.
+Now I'm back home and back to work and after a few days, the ground has stopped moving, so all in all, a successful trip. We didn't have internet access for most of the time and I think that was a huge factor in me feeling refreshed by the end. I definitely recommend when you take vacation, fully disconnect from work and even the internet. It'll do you a lot of good and the tire fire on Twitter will still be there when you get back.
