Add more lessons
Former-commit-id: fc4b009c2e1c565e92d854e331acd7d3fce096fd
Former-commit-id: 9b8ba352287bc314d746fce6092d2452ce8e2fc5
Former-commit-id: 5a1225cf4fc03591901a08a939f91b7506d0cec5 [formerly 5de6619282f739993e63c9fd6c2b864f7813a7ef]
Former-commit-id: 8cf5612fd0fa5f51af4c81c464387339764b243a

--- a/_posts/2016/2016-08-24-cruising.md
+++ b/_posts/2016/2016-08-24-cruising.md
@@ -31,6 +31,8 @@ But since you like puns, here's a couple of other Alaska related puns as told by
 > Hey pal, Alaska the questions here
 > I really do appreciate the way Alaska survived the 2008 financial crisis. Their secret? Fairbanks.
 
+__Lesson here: puns are awesome.__
+
 ![Juneau](https://cloud.githubusercontent.com/assets/19977/17880210/2e31313a-68ad-11e6-8caf-6e6b6d29313c.JPG)
 
 Back to the cruise. Our friend arranged a couple behind the scenes tours. One was below deck where we got to see the galley where all the food is made and the storage facilities. I was particularly excited to tour the room where they stock all the liquor.
@@ -40,6 +42,8 @@ The logistics of stocking a ship of two thousand passengers and one thousand cre
 One thing we noticed while touring the storage was they stocked expensive premium sticky rice for the crew that was different from the rice they usually served to customers. We noticed this because we're Asian and good rice is important.
 
 It turns out that the crew is predominantly Filipino and Indonesian and our friend noted that if they tried to cut costs with cheaper rice, they'd face a revolt. They know this because they've seen how much of a hit to morale cheaper rice was on other cruise lines. He fought hard to keep the quality rice because it's important to keep the crew's morale high. Not just with rice, but also by enlisting and empowering the crew itself to notice when conditions could be better and to do something about it.
+
+__Lesson here: Foster a culture where people are empowered to find and fix problems rather than always looking to you to fix it and things actually will improve.__
 
 And we noticed the impact of high morale. We were really impressed with the quality of service. The crew always seemed genuinely happy and friendly. Perhaps it's years of practice in the service industry, but I've been to nice hotels where everyone is nice, but you get the sense they don't really care about you. I really got the sense the crew cared.
 
