Add more lessons

--- a/_posts/2016/2016-08-24-cruising.md
+++ b/_posts/2016/2016-08-24-cruising.md
@@ -31,7 +31,7 @@ But since you like puns, here's a couple of other Alaska related puns as told by
 > Hey pal, Alaska the questions here
 > I really do appreciate the way Alaska survived the 2008 financial crisis. Their secret? Fairbanks.
 
-__Lesson here: puns are awesome.__
+__Lesson here, puns are awesome.__
 
 ![Juneau](https://cloud.githubusercontent.com/assets/19977/17880210/2e31313a-68ad-11e6-8caf-6e6b6d29313c.JPG)
 
@@ -43,7 +43,7 @@ One thing we noticed while touring the storage was they stocked expensive premiu
 
 It turns out that the crew is predominantly Filipino and Indonesian and our friend noted that if they tried to cut costs with cheaper rice, they'd face a revolt. They know this because they've seen how much of a hit to morale cheaper rice was on other cruise lines. He fought hard to keep the quality rice because it's important to keep the crew's morale high. Not just with rice, but also by enlisting and empowering the crew itself to notice when conditions could be better and to do something about it.
 
-__Lesson here: Foster a culture where people are empowered to find and fix problems rather than always looking to you to fix it and things actually will improve.__
+__Lesson here, foster a culture where people are empowered to find and fix problems rather than always looking to you to fix it and things actually will improve.__
 
 And we noticed the impact of high morale. We were really impressed with the quality of service. The crew always seemed genuinely happy and friendly. Perhaps it's years of practice in the service industry, but I've been to nice hotels where everyone is nice, but you get the sense they don't really care about you. I really got the sense the crew cared.
 
@@ -55,10 +55,12 @@ Another port we stopped in was beautiful Sitka. We took a tour of the [Alaska Ra
 
 Our second tour was of the bridge where the Dutch captain showed us the navigation systems and the controller for the ship. The view from the bridge was quite spectacular. We asked the captain whether he'd been on any trips where anyone fell overboard. No, but there was one trip where a very drunk passenger dropped anchor while they were out to sea. At the next port, the passenger tried to sneak off but they had the authorities waiting and they had camera footage of the incident.
 
-__Lesson, phase cancellation only works when the wavelengths are equivalent amplitude. In other words, don't overdo the drinking.__
+__Lesson here, phase cancellation only works when the wavelengths are equivalent amplitude. In other words, don't overdo the drinking.__
 
 The ship had a place for kids called "Club Hal" where you could drop kids off for a few hours at a time and go enjoy some Pina Coladas (to help with motion sickness of course). They had a lot of structured activities and a few X-boxes set up. Naturally, since this was convenient for us, my kids hated it. Over time, they warmed up to it a little as the kids at Club Hal held a revolt and demanded more kids choice activities and got their way.
 
 __Lesson here, it's important to balance a bit of structure with letting kids choose what they want to do.__
 
 Now I'm back home and back to work and after a few days, the ground has stopped moving, so all in all, a successful trip. We didn't have internet access for most of the time and I think that was a huge factor in me feeling refreshed by the end. I definitely recommend when you take vacation, fully disconnect from work and even the internet. It'll do you a lot of good and the tire fire on Twitter will still be there when you get back.
+
+__Lesson here, [take a vacation](http://haacked.com/archive/2016/02/18/unlimited-vaction-pitfalls/) now and then, eh?__
