Restructure the post a bit

--- a/_posts/2016/2016-09-01-we-hiring.md
+++ b/_posts/2016/2016-09-01-we-hiring.md
@@ -6,9 +6,19 @@ comments: true
 categories: [management github hiring]
 ---
 
-A few of my teams are hiring so I thought I'd take that as an opportunity to write about what's been keeping me so busy at GitHub lately and draw attention to the job postings. If you don't give a rat's ass about me, feel free to skip to the job postings at the bottom. By the way, even if you do give a rat's ass, please keep it to yourself. What I've been up to does not include collecting rodent derrières.
+I'm coming on five years at GitHub and I thought I'd write a bit about what I've been up to lately and the fact that several of my teams are hiring. If you don't give a rat's ass about what I'm up to, but are interested in our open positions, feel free to skip to the job postings at the bottom. By the way, even if you do give a rat's ass, please keep it to yourself. What I've been up to does not include collecting rodent derrières.
 
-I still don't know why that's a phrase we use, but I'm sure Mark Twain is involved...that rapscallion.
+I still don't know why that's a phrase we use, but I'm sure Mark Twain is involved...that rapscallion. But as usual, I digress.
+
+### What inspires me
+
+When I think about the work we do at GitHub, [the Story of Anna](https://www.youtube.com/watch?v=VzuBJTtwm3o) comes to mind. Building software is a great creator of opportunities for those from all walks of life. I love that I get to help build tools that make stories like this come true.
+
+In a [recent Octotale video](https://www.youtube.com/watch?v=LreQfx5x740), Desert Horse-Grant, the Director of Strategic Planning and Operations at Fred Hutch Cancer Research Center noted that "cancer will be solved on a computer."
+
+We're not solving cancer, but we build the tools for those who are. And that's what gets me inspired every day.
+
+### My new position
 
 Several months ago, I took a new position as an Engineering Director at GitHub. The position was new in the sense it was both new to GitHub and new to me. What this means is that I now manage managers. I guess this is what happens to people who like to [blog about blogging](http://haacked.com/archive/2005/03/13/Blogging-About-Blogging-AboutBlogging.aspx/), they end up managing managers.
 
@@ -18,16 +28,20 @@ Directors, on the other hand are much more focused on people and management issu
 
 When I do spend time on technical work, it is focused on strategic and big picture issues. Every engineer should be thinking this way, but I have the "benefit" of not having a primary responsibility to write production code which means I can dedicate more time to this sort of work.
 
-The four teams that I work with are Atom, Electron, Desktop, and Editor Tools (the team responsible for the [GitHub extension for Visual Studio](https://visualstudio.github.com/)). I am incredibly lucky to get to work with such a talented group of people. I've had to learn so much in a short time to even understand the conversations they're having, much less participate.
+The four teams that I work with are Atom, Electron, Desktop, and Editor Tools (the team responsible for the [GitHub extension for Visual Studio](https://visualstudio.github.com/)). I am incredibly lucky to get to work with such a talented group of people. I've been really stretched in a technical sense as these teams use a wide variety of technology.
 
-So that leads me to the topic at hand. Several of these teams are hiring. We're looking for engineers who are great team players to work with us on some great products. Check out these job postings and if you think this job is for you, hit the big blue Apply button.
+### Open positions on my teams
 
-* [Atom](https://jobs.lever.co/github/baaa9a2c-c249-4d06-b73f-e9bee1a3d147)
-* [Editor Tools](https://jobs.lever.co/github/9be225ec-9ad0-4439-b173-0eeea4e9f587)
-* [Desktop](https://jobs.lever.co/github/23ee93fb-59f0-417a-85fd-92cc302cce52)
+So that leads me to the topic at hand. Several of these teams are hiring. Here are the job postings.
 
-So why GitHub?
+* [Atom: Application Engineer](https://jobs.lever.co/github/baaa9a2c-c249-4d06-b73f-e9bee1a3d147)
+* [Editor Tools: Application Developer](https://jobs.lever.co/github/9be225ec-9ad0-4439-b173-0eeea4e9f587)
+* [Desktop: Application Developer](https://jobs.lever.co/github/23ee93fb-59f0-417a-85fd-92cc302cce52)
 
-For me, [it's the story of Anna](https://www.youtube.com/watch?v=VzuBJTtwm3o). We're building the tools and communities that make stories like this a reality all over the world. In a [recent Octotale](https://www.youtube.com/watch?v=LreQfx5x740), Desert Horse-Grant, the Director of Strategic Planning and Operations at Fred Hutch Cancer Research Center noted that "cancer will be solved on a computer."
+If building tools for this and the next generation of developers inspires you, take a look. We're looking for software engineers who thrive as part of a team in a supportive environment. The New York Times recently [published an article about what Google learned in its quest to build a perfect team](http://www.nytimes.com/2016/02/28/magazine/what-google-learned-from-its-quest-to-build-the-perfect-team.html?_r=0). The lessons they learned about what people think makes a great team and what actually works are very interesting. We want to be a place that embodies that sort of team.
 
-We're not solving cancer, but we build the tools for those who are. And that's what gets me inspired every day.
+As our [Jobs page mentions](https://github.com/about/jobs), we're focused on building a diverse and inclusive workplace. We have a nice benefits package that includes a generous parental leave policy. We have flexible work schedules and [a generous vacation policy](http://haacked.com/archive/2016/02/18/unlimited-vaction-pitfalls/).
+
+I believe the reason we provide all this is because we're focused on building a sustainable environment for people to do great work. We don't want to bring a person in just to wring out as much code as possible from them because people bring so much more than just the code they can write to the table.
+
+If that all sounds appealing to you, click on the big blue "Apply for a Job" button in those job postings.
