Note that it's being used in production
Former-commit-id: aa13bb48c6dfbaa8ad435dc34267452cf0a8425f
Former-commit-id: c84800d3b51e776f42525c039487173237b24819
Former-commit-id: fecce3c607e9de027f6490c6f784579cde81df3d [formerly bdb058b323c5435f67a6b1792c5124dfe29efdc4]
Former-commit-id: 88b4916d5496b39e548623747074132110609cd5

--- a/_posts/2016/2016-09-29-scientist-1.0-released.md
+++ b/_posts/2016/2016-09-29-scientist-1.0-released.md
@@ -8,7 +8,7 @@ categories: [github csharp dotnet scientist]
 
 In the beginning of the year I [announced a .NET Port](http://haacked.com/archive/2016/01/20/scientist/) of GitHub's [Scientist library](http://githubengineering.com/scientist/). Since then I and several [contributors from the community](https://github.com/github/scientist.net/graphs/contributors) (kudos to them all!) have been hard at work getting this library to 1.0 status. Ok, maybe not that hard considering how long it's taken. This has been a side project labor of love for me and the others.
 
-Today I released an official 1.0 version of Scientist.NET with a snazzy new logo from the GitHub creative team.
+Today I released an official 1.0 version of Scientist.NET with a snazzy new logo from the GitHub creative team. It's feature complete and used in production by some of the contributors.
 
 ![Scientist logo with two test tubes slightly unbalanced](https://cloud.githubusercontent.com/assets/11401067/18854833/06971aa6-8403-11e6-87a2-2ea76b40ee06.png)
 
