--- a/_posts/2017/2017-02-14-on-dotnet.md
+++ b/_posts/2017/2017-02-14-on-dotnet.md
@@ -13,3 +13,5 @@ I hope you enjoy the interview!
 On a personal note, I've found it hard to blog lately because every topic seems so trivial in light of what's happening in our country. It's easy to feel helpless and despair. If I could humbly recommend one thing that can help give you some semblance of power back, it's to call your representatives. It's more impactful than partaking in internet surveys, and way more useful than debating people on Facebook. I've been using https://5calls.org/ to walk me through what to do. It only takes around five minutes of your time (I have a weekly appointment on my calendar).
 
 If you want to understand why this is effective, check out https://www.indivisibleguide.com/ which talks about the motivations of your local representatives.
+
+For my part, I will continue to RESIST. But I do think that continuing to live my life and write about topics that interest me can be part of that. So I hope to get back to writing about software and software leadership more. Stay tuned!
