--- a/_posts/2016/2016-04-28-thank-you.md
+++ b/_posts/2016/2016-04-28-thank-you.md
@@ -3,7 +3,7 @@ layout: post
 title: "Thank You For Your Pull Request"
 date: 2016-04-28 -0800
 comments: true
-categories: [code review,github,code]
+categories: [code review github code]
 ---
 
 As an open source maintainer, it's important to recognize and show appreciation for contributions, especially external contributions.
