Fix some image references

--- a/_posts/archived/2005-07-31-asakusa.aspx.markdown
+++ b/_posts/archived/2005-07-31-asakusa.aspx.markdown
@@ -10,7 +10,7 @@ redirect_from: "/archive/2005/07/30/asakusa.aspx/"
 ---
 
 [![Asakusa
-Pagoda](http://photos21.flickr.com/29892020_a6b42ab963_m.jpg)](http://www.flickr.com/photos/haacked/29892020/ "Photo Sharing")
+Pagoda](https://photos21.flickr.com/29892020_a6b42ab963_m.jpg)](http://www.flickr.com/photos/haacked/29892020/ "Photo Sharing")
 Yesterday we were given a tour of Asakusa from an old family friend who
 resides there. He is an “Edoko”, a 3rd generation Tokyo native.
 Apparently, it takes three generations before you get to carry the Tokyo
@@ -23,7 +23,7 @@ a Parisian unless your parents and their parents were born and raised in
 Paris.
 
 [![Asahi Corporate
-headquarters](http://photos23.flickr.com/29891998_e1f61a36b2_m.jpg)](http://www.flickr.com/photos/haacked/29891998/ "Photo Sharing")
+headquarters](https://photos23.flickr.com/29891998_e1f61a36b2_m.jpg)](http://www.flickr.com/photos/haacked/29891998/ "Photo Sharing")
 My grasp of Japanese is still pretty close to non-existent, but even I
 was able to tell that he had an Edoko accent. They can’t pronounce the
 “h” sound so he prounces Asahi, “Asashi.” And when he says, “You’re
@@ -40,7 +40,7 @@ Flickr](http://www.flickr.com/photos/haacked/sets/674791/), in case you
 are interested in seeing more photos.
 
 [![Dinosaur
-Roar](http://photos23.flickr.com/29891983_a51433eedf_m.jpg)](http://www.flickr.com/photos/haacked/29891983/ "Photo Sharing")
+Roar](https://photos23.flickr.com/29891983_a51433eedf_m.jpg)](http://www.flickr.com/photos/haacked/29891983/ "Photo Sharing")
 But I will mention that the day prior, we were in a mall when we ran
 into Harry here on the left. The mall had a couple of animatronic
 dinosaurs on display. Their movements were quite impressive and not at
