--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -14,7 +14,7 @@ The genius in the tweet is how it draws a comparison to Bitcoin's approach to ac
 
 With Bitcoin, there's a proof-of-work algorithm that relies on generating SHAs until you find one with a certain number of leading zeroes. Git commit SHAs could perhaps serve a similar purpose.
 
-Is this a good way to pick a project maintainer? Probably not. But why let that stop you? If you like to embrace chaos, I've got just the command for you.
+Is this a good way to pick a project maintainer? Probably not. But then again, it's not that far off from how I make most important life decisions. If your project wants to take a walk on the wild side, I've got just the command for you.
 
 Run the following command in a Git repository and it'll return the name of the author, the commit date, and the SHA of the commit that has the lowest SHA sorted lexicographically.
 
@@ -73,7 +73,7 @@ Not to mention, my background is primarily with Windows so my Unix-fu is fairly 
 
 `TZ=UTC git log --pretty=format:'%H%x09%ad%x09%an' --date=iso-local | grep ^0.* | sed -E 's/(0+)(.*)/\1\t\1\2/' | sort -k1,1 -k3,3r | tail -n1 | cut -f 2,3,4`
 
-## The breakdown
+## The excrutiatingly detailed breakdown
 
 Let's break this down piece by piece for those of you like me who don't eat and breath shell scripting. Unix-fu masters may want to skip to the next section where I unveil the real maintainer of Rails.
 
@@ -128,7 +128,7 @@ Now that we have the proper sort in play, we just need to take the last entry. T
 
 And finally, we don't need the leading zeroes column in the final output so I run the `cut` command and only keep columns 2, 3, and 4.
 
-## In Conclusion
+## Drumroll...
 
 When I run this against the Rails repository, it outputs (again, SHA truncated for presentation purposes):
 
