Link to the Rails repository

--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -39,7 +39,7 @@ We pipe that to the `sort` command. Since no two SHAs can be the same, we don't 
 
 It's possible that there won't be any commits with leading 0s, but I ignore that for now. I figure the commit with the lowest SHA sorted alphabetically fits with the spirit of the idea.
 
-Since github.com runs on Ruby on Rails, I thought it'd be fun to try it out on https://github.com/rails/rails. I cloned the repository to my machine and ran `git coin` on it. Here's the output (SHA truncated for presentation purposes):
+Since github.com runs on Ruby on Rails, I thought it'd be fun to try it out on [https://github.com/rails/rails](https://github.com/rails/rails). I cloned the repository to my machine and ran `git coin` on it. Here's the output (SHA truncated for presentation purposes):
 
 ```
 000121e8 Thu Nov 15 23:10:45 2012 +0200 Agis Anastasopoulos
@@ -135,4 +135,4 @@ When I run this against the Rails repository, it outputs (again, SHA truncated f
 ```
 00050dfe	2006-04-09 21:27:32 +0000	David Heinemeier Hansson
 ```
-Sorry Agis, David Heinemeier Hansson is now the Rails maintainer. I hope this David person takes the responsibility seriously.
+Sorry Agis, this [David Heinemeier Hansson](http://david.heinemeierhansson.com/) person is now the Rails maintainer. I hope David takes the responsibility seriously.
