Add implication of this model
Former-commit-id: 66b8698243d2c3c6570e7d97c80ecb8d666e0cdd

--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -65,7 +65,7 @@ If we translate this to the gitcoin idea, we probably want to look at the first 
 
 For example, say that the current maintainer was chosen because of a commit with a SHA that has two leading zeros. The next maintainer is chosen by the commit that has three (or more) leading zeroes. The next maintainer after that is chosen by the first commit with one more leading zero than the commit that chose the previous maintainer. And so on.
 
-In other words, every time a new maintainer is chosen by this protocol, the target number of leading zeroes increases by one.
+In other words, every time a new maintainer is chosen by this protocol, the target number of leading zeroes increases by one. The implication is that over time, maintainers chosen by this project will spend more and more time maintaining the project. Not sure that's necessarily a desirable trait or not.
 
 The shell script to find the maintainer with these rules is considerably more complex than my previous script. This is why I originally wanted to stop with that script and call it a day. Also, I'm lazy.
 
