Follow up with why the tabs were handy

--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -126,7 +126,7 @@ Now that we have the proper sort in play, we just need to take the last entry. T
 
 `cut -f 2,3,4`
 
-And finally, we don't need the leading zeroes column in the final output so I run the `cut` command and only keep columns 2, 3, and 4.
+And finally, we don't need the leading zeroes column in the final output so I run the `cut` command and only keep columns 2, 3, and 4. This is where inserting the tabs before comes in handy. By default, `cut` uses the tab character as a delimiter.
 
 ## Drumroll...
 
