--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -16,7 +16,7 @@ With Bitcoin, there's a proof-of-work algorithm that relies on generating SHAs u
 
 Is this a good way to pick a project maintainer? Probably not. But then again, it's not that far off from how I make most important life decisions. If your project wants to take a walk on the wild side, I've got just the command for you.
 
-### A simple solution
+## A simple solution
 
 Run the following command in a Git repository and it'll return the name of the author, the commit date, and the SHA of the commit that has the lowest SHA sorted lexicographically.
 
@@ -49,7 +49,7 @@ Since github.com runs on Ruby on Rails, I thought it'd be fun to try it out on [
 
 __Congratulations Agis! You are the new maintainer of Rails!__
 
-### Not so fast!
+## Not so fast!
 
 I know what some of you are thinking, "You are ridiculous. This is a waste of time." To those I say, hold my beer because I'm not done yet.
 
@@ -75,7 +75,7 @@ Not to mention, my background is primarily with Windows so my Unix-fu is fairly 
 
 `TZ=UTC git log --pretty=format:'%H%x09%ad%x09%an' --date=iso-local | grep ^0.* | sed -E 's/(0+)(.*)/\1\t\1\2/' | sort -k1,1 -k3,3r | tail -n1 | cut -f 2,3,4`
 
-### And the award goes to...
+## And the award goes to...
 
 When I run this against the Rails repository, it outputs (again, SHA truncated for presentation purposes):
 
@@ -84,7 +84,7 @@ When I run this against the Rails repository, it outputs (again, SHA truncated f
 ```
 Sorry Agis, this __[David Heinemeier Hansson](http://david.heinemeierhansson.com/) person is now the Rails maintainer!__ I hope David accepts this responsibility seriously.
 
-### Uh, still not there.
+## Uh, still not there.
 
 If you read an earlier version of this post, you'll note I declared DHH the maintainer of Rails. But Jean-Jacques Lafay noted in the comments to this post that I need to look at the leading zeros of the SHA _when written in binary form_. Whoops! This makes a lot of sense, when you think about it. Every time we increment the target, we're only doubling the average mining time. Otherwise, we'd be making it 16 times harder!
 
@@ -96,9 +96,9 @@ So here's the updated script:
 
 `TZ=UTC git log --pretty=format:'%H%x09%ad%x09%an' --date=iso-local | sed -E 's/^(0*[1-9a-f])(.*)/\1\t\1\2/' | sort -k1,1 -k3,3 | head -n1 | cut -f 2,3,4`
 
-And once again,__Agis is the new maintainer for Rails!__ 
+And once again, __Agis is the new maintainer for Rails!__ 
 
-### The excrutiatingly detailed breakdown
+## The excrutiatingly detailed breakdown
 
 Let's break this down piece by piece for those of you like me who don't eat and breath shell scripting.
 
