Clarify how the difficulty changes

--- a/_posts/2017/2017-10-20-gitcoin.md
+++ b/_posts/2017/2017-10-20-gitcoin.md
@@ -86,9 +86,11 @@ Sorry Agis, this __[David Heinemeier Hansson](http://david.heinemeierhansson.com
 
 ## Uh, still not there.
 
-If you read an earlier version of this post, you'll note I declared DHH the maintainer of Rails. But Jean-Jacques Lafay noted in the comments to this post that I need to look at the leading zeros of the SHA _when written in binary form_. Whoops! This makes a lot of sense, when you think about it. Every time we increment the target, we're only doubling the average mining time. Otherwise, we'd be making it 16 times harder!
+If you read an earlier version of this post, you'll note I declared DHH the maintainer of Rails. But Jean-Jacques Lafay noted in the comments to this post that I need to look at the leading zeros of the SHA _when written in binary form_. Whoops!
 
-The correction to my script is pretty simple, I need to grab all the zeros (if any) and the first non-zero character when creating the sort key. Any characters after that won't change the leading zeros.
+This makes a lot of sense, when you think about it. Under my original implementation, every time we choose a new maintainer, we increased the difficulty in choosing the next maintainer by 16 times. When we look at leading zeros in binary form, we only double the time.
+
+Fortunately, the correction to my script is pretty simple, I need to grab all the zeros (if any) and the first non-zero character when creating the sort key. Any characters after that won't change the leading zeros.
 
 For example, `001a` and `001b` have the same number of leading zeros when expressed as binary. But `00a` and `00b` do not have the same number of leading zeros.
 
