--- a/_posts/archived/2006/2006-08-09-asp.netsupervisingcontrollermodelviewpresenterfromschematictounitteststocode.aspx.markdown
+++ b/_posts/archived/2006/2006-08-09-asp.netsupervisingcontrollermodelviewpresenterfromschematictounitteststocode.aspx.markdown
@@ -6,6 +6,7 @@ date: 2006-08-09 -0800
 comments: true
 redirect_from:
 - "/archive/2006/08/08/asp.netsupervisingcontrollermodelviewpresenterfromschematictounitteststocode.aspx/"
+- "/archive/2006/08/09/ASP.NETSupervisingControllerModelViewPresenterFromSchematicToUnitTestsToCode.aspx/"
 disqus_identifier: 14779
 categories:
 - asp.net
