--- a/_posts/archived/2004/2004-02-25-jiraffe.aspx.markdown
+++ b/_posts/archived/2004/2004-02-25-jiraffe.aspx.markdown
@@ -1,8 +1,7 @@
 ---
 title: Jiraffe
 date: 2004-02-25 -0800
-tags:
-- personal
+tags: [personal]
 redirect_from: "/archive/2004/02/24/jiraffe.aspx/"
 ---
 
