--- a/_posts/archived/2004/2004-08-09-deep-dish.aspx.markdown
+++ b/_posts/archived/2004/2004-08-09-deep-dish.aspx.markdown
@@ -1,8 +1,7 @@
 ---
 title: Deep Dish
 date: 2004-08-09 -0800
-tags:
-- personal
+tags: [music]
 redirect_from: "/archive/2004/08/08/deep-dish.aspx/"
 ---
 
