--- a/_posts/archived/2005/2005-12-29-year-in-review-2005.aspx.markdown
+++ b/_posts/archived/2005/2005-12-29-year-in-review-2005.aspx.markdown
@@ -1,8 +1,7 @@
 ---
 title: My Year In Blogging - 2005
 date: 2005-12-29 -0800
-tags:
-- personal
+tags: [meta]
 redirect_from: "/archive/2005/12/28/year-in-review-2005.aspx/"
 ---
 
