--- a/_posts/archived/2008/2008-08-10-subtext-2.0-released.aspx.markdown
+++ b/_posts/archived/2008/2008-08-10-subtext-2.0-released.aspx.markdown
@@ -1,8 +1,7 @@
 ---
 title: Subtext 2.0 Released
 date: 2008-08-10 -0800
-tags:
-- personal
+tags: [subtext]
 redirect_from: "/archive/2008/08/09/subtext-2.0-released.aspx/"
 ---
 
