--- a/_posts/archived/2008/2008-11-01-pdc2008.aspx.markdown
+++ b/_posts/archived/2008/2008-11-01-pdc2008.aspx.markdown
@@ -1,9 +1,7 @@
 ---
 title: Hazy Recollections of PDC 2008
 date: 2008-11-01 -0800
-tags:
-- code
-- personal
+tags: [conferences]
 redirect_from: "/archive/2008/10/31/pdc2008.aspx/"
 ---
 
