--- a/_posts/archived/2011/2011-12-26-oss-net-2011.aspx.markdown
+++ b/_posts/archived/2011/2011-12-26-oss-net-2011.aspx.markdown
@@ -1,9 +1,7 @@
 ---
 title: OSS and .NET Year In Review 2011
 date: 2011-12-26 -0800
-tags:
-- code
-- oss
+tags: [oss,dotnet]
 redirect_from: "/archive/2011/12/25/oss-net-2011.aspx/"
 ---
 
