--- a/_posts/archived/2006/2006-07-14-ASP.NET2.0ClientValidationJavascriptBug.aspx.markdown
+++ b/_posts/archived/2006/2006-07-14-ASP.NET2.0ClientValidationJavascriptBug.aspx.markdown
@@ -1,7 +1,7 @@
 ---
 title: ASP.NET 2.0 Client Validation Javascript Bug
 date: 2006-07-14 -0800
-tags: []
+tags: [aspnet,validation]
 redirect_from: "/archive/2006/07/13/ASP.NET2.0ClientValidationJavascriptBug.aspx/"
 ---
 
