--- a/_posts/archived/2006/2006-10-25-Subtext_1.9.2_quotShields_Upquot_Edition_Released.aspx.markdown
+++ b/_posts/archived/2006/2006-10-25-Subtext_1.9.2_quotShields_Upquot_Edition_Released.aspx.markdown
@@ -1,7 +1,7 @@
 ---
 title: Subtext 1.9.2 &quot;Shields Up&quot; Edition Released!
 date: 2006-10-25 -0800
-tags: []
+tags: [subtext]
 redirect_from: "/archive/2006/10/24/Subtext_1.9.2_quotShields_Upquot_Edition_Released.aspx/"
 ---
 
