--- a/_posts/archived/2006/2006-06-07-Subtext1.5NautilusRAndREditionReleased.aspx.markdown
+++ b/_posts/archived/2006/2006-06-07-Subtext1.5NautilusRAndREditionReleased.aspx.markdown
@@ -1,7 +1,7 @@
 ---
 title: Subtext 1.5 Nautilus R and R Edition Released!
 date: 2006-06-07 -0800
-tags: []
+tags: [subtext]
 redirect_from: "/archive/2006/06/06/Subtext1.5NautilusRAndREditionReleased.aspx/"
 ---
 
