--- a/_posts/2017/2017-10-20-gitcoin.markdown
+++ b/_posts/2017/2017-10-20-gitcoin.markdown
@@ -2,7 +2,7 @@
 title: "Git Coin Project Maintainer Consensus Protocol"
 description: "A tongue-in-cheek, but functional, protocol for determining an OSS project maintainer based on a distributed consensus algorithm."
 date: 2017-10-22 -0800 4:36 PM PDT
-tags: [git,crypto,humor,oss,bash,shell,unix,aliases]
+tags: [git,crypto,humor,oss,shell,aliases]
 ---
 
 A [recent wry tweet](https://twitter.com/bcrypt/status/918222753500508160) by [@bcrypt](https://twitter.com/bcrypt/) really tickled my funny bone:
